# moodules-demo

./: README.md  package.json  virtualish.install
esy.lock/: index.json
test/: .merlin  dune
testExe/: .merlin  dune
virtualishHack/: .merlin  UsesVirtualModule.re  VirtualInterface.re  dune  dune-try
virtualishHack/subdir/: VirtualInterfaceInSubdir.re  dune
virtualishVirtual/: VirtualInterface.rei  VirtualModule.re  dune
virtualishVirtual/subdir/: VirtualInterfaceInSubdir.rei
